Fix alignment of tab panel entries

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -147,6 +147,8 @@ nav#toc-tabs {
   .tab-strip {
     display: flex;
     gap: 2px;
+    min-height: 2em;
+    height: auto; 
 
     a { 
 
@@ -162,19 +164,28 @@ nav#toc-tabs {
       display: none;
     }
 
+    label { 
+    } 
+
   }
 
-  .substrip .tab-label { 
-    font-size: 0.8em;
-    margin-top: 0.5em;
+  .substrip { 
+    margin-bottom: 2em;
+    margin-top: 2em;
+    height: auto;
+
+    .tab-label { 
+      font-size: 0.8em;
+    }
   } 
 
   .tab-label {
-    display: flex;
+    /* display: flex; 
     align-items: center;
+    */
+    display: block;
+    min-height: 100%;
     gap: 8px;
-    min-height: 1.5em;
-    height: auto; 
     padding: 0 1em;
     font-size: 0.875em;
     font-weight: 500;
@@ -192,7 +203,7 @@ nav#toc-tabs {
     */
     padding-left: 0.5em;
     padding-right: 0.5em;
-    margin-bottom: 0.5em;
+    /* margin-bottom: 0.5em; */
   }
 
   .tab-panels {
@@ -816,6 +827,8 @@ p.bigtext {
   }
 }
 
+/* ------ BASICS ------ */
+
 html {
   height: 100%;
 }
@@ -1048,6 +1061,7 @@ body {
       border-left: 4px solid $dark;
     }
 
+    /* --- THEME COLORS ---- */
     &.purple {
       .content {
         border-left: 4px solid $purple;
@@ -1214,6 +1228,7 @@ body {
   .no-margin-top {
     margin-top: 0;
   }
+
 }
 
 @media screen and (max-width: 1080px) {
